--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,14 @@
 [build]
 builder = "NIXPACKS"
 
+[build.nixpacksPlan]
+providers = ["python"]
+
+[build.nixpacksPhase.install]
+cmds = ["pip install -r backend/requirements.txt"]
+
 [deploy]
-startCommand = "uvicorn backend.app:app --host 0.0.0.0 --port $PORT"
+startCommand = "python -m uvicorn backend.app:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/api/health"
 healthcheckTimeout = 300
 restartPolicyType = "ON_FAILURE"
